refactor : 인스턴스화 방지와 toList 사용